# treesearchsolverpy

./: README.md  setup.cfg
examples/: travellingsalesman.py
treesearchsolverpy/: __init__.py  best_first_search.py  commons.py  greedy.py  iterative_beam_search.py
