[metadata]
name = treesearchsolverpy
version = 0.0.5
author = Florian Fontan
author_email = dev@florian-fontan.fr
description = A solver based on heuristic tree search
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fontanf/treesearchsolverpy
project_urls =
    Bug Tracker = https://github.com/fontanf/treesearchsolverpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    sortedcontainers
python_requires = >=3.6
